--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -191,6 +191,27 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QPushButton" name="gaussianBlurButton">
+              <property name="text">
+               <string>Gaussian Blur</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="sharpenButton">
+              <property name="text">
+               <string>Sharpen</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="edgeDetectionButton">
+              <property name="text">
+               <string>Edge Detection</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
